<resources>
    <string name="app_name">TFG</string>
    <string name="TFG" />
    <string name="welcomeText">Aplicación para TFG</string>
    <string name="profile">Perfil de usuario</string>
    <string name="info">Información</string>
    <string name="logout">Cerrar sesión</string>
    <string name="form">Formulario</string>
    <string name="food">Lista de comidas</string>
    <string name="others">Otros</string>
    <string name="feedback">Feedback</string>
    <string name="creatorName">Manuel Rueda Algar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mainpage">Página principal</string>
    <string name="foodnameinlist">Food name</string>
    <string name="foodcaloriesinlist">Food calories</string>
    <string name="formMainPage">Formulario</string>
    <string name="profileMainPage">Perfil</string>
    <string name="foodListMainPage">Comidas</string>
    <string name="firstDayTab">Primer día</string>
    <string name="secondDayTab">Segundo día</string>
    <string name="thirdDayTab">Tercer día</string>
    <string name="add">Añadir</string>
    <string name="breakfast">Desayuno</string>
    <string name="lunch">Almuerzo</string>
    <string name="dinner">Cena</string>
    <string name="quantityFood">Cantidad tomada (g/ml)</string>
    <string name="frecuencia_de_consumo">Frecuencia de consumo</string>
</resources>