<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_MainPage"
        android:title="@string/mainpage"
        android:icon="@drawable/mainpage"
        app:destination="@id/menu_MainPage"/>

    <item
        android:id="@+id/menuProfile"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        app:destination="@id/menuProfile"/>

    <item
        android:id="@+id/menu_Form"
        android:title="@string/form"
        android:icon="@drawable/form"
        app:destination="@id/menu_Form"/>

    <item
        android:id="@+id/menu_Food"
        android:title="@string/food"
        android:icon="@drawable/foodlist"
        app:destination="@id/menu_Food"/>

    <item
        android:title="@string/others">
        <menu>
            <item
                android:id="@+id/menu_Info"
                android:title="@string/info"
                android:icon="@drawable/info"
                app:destination="@id/menu_Info"/>

            <item
                android:id="@+id/menu_Feedback"
                android:title="@string/feedback"
                android:icon="@drawable/feedback"
                app:destination="@id/menu_Feedback"/>

            <item
                android:id="@+id/menu_Logout"
                android:title="@string/logout"
                android:icon="@drawable/logout" />
        </menu>
    </item>

</menu>