<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainPageFragment">

    <com.google.android.material.imageview.ShapeableImageView
        app:strokeColor="@null"
        android:id="@+id/welcomeImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/etsiinf"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¡Bienvenido usuario!"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/welcomeImage"
        app:layout_constraintStart_toStartOf="@+id/welcomeImage"
        app:layout_constraintTop_toBottomOf="@+id/welcomeImage" />

    <TextView
        android:id="@+id/welcomeText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿Qué tal has comido hoy?"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorYellow"
        app:layout_constraintEnd_toEndOf="@+id/welcomeText"
        app:layout_constraintStart_toStartOf="@+id/welcomeText"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText2">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        app:strokeColor="@null"
                        android:id="@+id/foodListMainPage"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/foodlist"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/foodListTextMainPage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/foodListMainPage" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        app:strokeColor="@null"
                        android:id="@+id/profileMainPage"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:scaleType="centerInside"
                        android:src="@drawable/profile"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/profileTextMainPage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/profileMainPage" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        app:strokeColor="@null"
                        android:id="@+id/formMainPage"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/form"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/formTextMainPage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/formMainPage" />
                </LinearLayout>

            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>